--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Chat App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-[poppins]"></div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="/src/main.jsx"></script>
